Fixing what is witcon section, resizing nav bar, moving countdonw to align

--- a/src/WhatIsWitCon.css
+++ b/src/WhatIsWitCon.css
@@ -20,7 +20,7 @@
   font-size: 100%;
   line-height: 1.8;
   text-align: left;
-  padding: 5%;
+  padding: 30px;
   padding-left: 0%;
 }
 
